--- a/exercice2.html
+++ b/exercice2.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
-   <head></head>
+<head>
+  <meta charset="utf-8">
+  <title>Exercice 2</title>
+</head>
 <body>
-<h1>Exercice 2</h1>
-<p>Je commence l'exercice2</p>
-<h2>Suite de l'exercice2</h2>
-<p>Je continue l'exercice 2</p>
-<h2>fin de l'exercice 2</h2>
-<p>Je termine l'exercice 2</p>
-   
+  <h1>Exercice 2</h1>
+  <p>Je commence l'exercice2</p>
+  <h2>Suite de l'exercice2</h2>
+  <p>Je continue l'exercice 2</p>
+  <h2>fin de l'exercice 2</h2>
+  <p>Je termine l'exercice 2</p>
+</body>
+</html>
